# AxiomBrain

./: .cursorrules  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  brain.py  docker-compose.yml  pyproject.toml  requirements.txt  setup_local_db.py
.claude/: settings.local.json
assets/vector.v0.8.1-pg17/: readme.txt
axiom_brain/: client.py  config.py
axiom_brain/api/: auth.py  main.py  schemas.py
axiom_brain/api/routes/: dashboard.py  decay.py  graph.py  health.py  ingest.py  search.py  summarize.py  webhooks.py  workspaces.py
axiom_brain/database/: connection.py  migrate.py  neo4j.py  workspace.py
axiom_brain/database/migrations/: 001_initial_schema.sql  002_relationships.sql  003_summaries.sql  004_decay.sql  005_workspaces.sql
axiom_brain/jobs/: __init__.py  decay.py  summarize.py
axiom_brain/mcp/: server.py
axiom_brain/memory/: classifier.py  decay.py  embedder.py  graph.py  router.py  summarizer.py
axiom_brain/notifications/: teams.py
docs/: AxiomBrain_Architecture.docx  auto-capture-setup.md
examples/: example_agent.py
scripts/: migrate_edges_to_neo4j.py
scripts/hooks/: git_capture.py  install_hooks.py
tests/: test_classifier.py
